==> openwch/ch583/Application/wristband/firmware/Demo_Firmware/drivers/I2C/twi.c <==
#include <math.h>
#include <stdlib.h>
#include <inttypes.h>
#include "CH58x_common.h"
#define cbi(sfr, bit) (_SFR_BYTE(sfr) &= ~_BV(bit))
#define sbi(sfr, bit) (_SFR_BYTE(sfr) |= _BV(bit))
#include "twi.h"

void twi_init(void) {
    // initialize state
    twi_state = TWI_READY;
    twi_sendStop = true;      // default value
    twi_inRepStart = false;

    GPIOB_ModeCfg( GPIO_Pin_13 | GPIO_Pin_12, GPIO_ModeIN_PU);

    I2C_Init(I2C_Mode_I2C, TWI_FREQ, I2C_DutyCycle_16_9, I2C_Ack_Enable,
            I2C_AckAddr_7bit, TWI_ADDR);

    I2C_ITConfig(I2C_IT_BUF | I2C_IT_EVT | I2C_IT_ERR, ENABLE);

    PFIC_EnableIRQ(I2C_IRQn);
}

__HIGH_CODE
uint8_t twi_readFrom(uint8_t address, uint8_t* data, uint8_t length,
        uint8_t sendStop) {
    uint8_t i;


    // ensure data will fit into buffer
    if (TWI_BUFFER_LENGTH < length) {
        return 0;
    }

    // wait until twi is ready, become master receiver
    while (TWI_READY != twi_state) {
        continue;
    }
    twi_state = TWI_MRX;
    twi_sendStop = sendStop;
    // reset error state (0xFF.. no error occured)
    twi_error = 0xFF;

    if(length == 1)  {
        R16_I2C_CTRL1 &= ~RB_I2C_ACK;  //由于ACK/NACK在下一次传输数据时生效，所以需要提前配置
        isnack = true;
    }

    // initialize buffer iteration vars
    twi_masterBufferIndex = 0;
    twi_masterBufferLength = length - 1;  // This is not intuitive, read on...
    // On receive, the previously configured ACK/NACK setting is transmitted in
    // response to the received byte before the interrupt is signalled.
    // Therefor we must actually set NACK when the _next_ to last byte is
    // received, causing that NACK to be sent in response to receiving the last
    // expected byte of data.

    // build sla+w, slave device address + w bit
    twi_slarw = TW_READ;
    twi_slarw |= address << 1;

    if (true == twi_inRepStart) {
        // if we're in the repeated start state, then we've already sent the start,
        // (@@@ we hope), and the TWI statemachine is just waiting for the address byte.
        // We need to remove ourselves from the repeated start state before we enable interrupts,
        // since the ISR is ASYNC, and we could get confused if we hit the ISR before cleaning
        // up. Also, don't enable the START interrupt. There may be one pending from the
        // repeated start that we sent ourselves, and that would really confuse things.
        twi_inRepStart = false;     // remember, we're dealing with an ASYNC ISR
        do {
            R16_I2C_DATAR = twi_slarw;
        } while (R16_I2C_CTRL1 & RB_I2C_BTF); //数据已发送
        R16_I2C_CTRL2 |= (I2C_IT_BUF | I2C_IT_EVT | I2C_IT_ERR);
    } else{
        // send start condition
        R16_I2C_CTRL2 |= (I2C_IT_BUF | I2C_IT_EVT | I2C_IT_ERR);
        twi_start();
    }

    // wait for read operation to complete
    while (TWI_MRX == twi_state) {
        continue;
    }

    if (twi_masterBufferIndex < length)
        length = twi_masterBufferIndex;

    // copy twi buffer to data
    for (i = 0; i < length; ++i) {
        data[i] = twi_masterBuffer[i];
    }

    return length;
}

__HIGH_CODE
uint8_t twi_writeTo(uint8_t address, uint8_t* data, uint8_t length,
        uint8_t wait, uint8_t sendStop) {
    uint8_t i;
    // ensure data will fit into buffer
    if (TWI_BUFFER_LENGTH < length) {
        return 1;
    }
    // wait until twi is ready, become master transmitter
    while (TWI_READY != twi_state) {
        continue;
    }
    twi_state = TWI_MTX;
    twi_sendStop = sendStop;
    // reset error state (0xFF.. no error occured)
    twi_error = 0xFF;

    // initialize buffer iteration vars
    twi_masterBufferIndex = 0;
    twi_masterBufferLength = length;

    // copy data to twi buffer
    for (i = 0; i < length; ++i) {
        twi_masterBuffer[i] = data[i];
    }

    // build sla+w, slave device address + w bit
    twi_slarw = TW_WRITE;
    twi_slarw |= address << 1;

    // if we're in a repeated start, then we've already sent the START
    // in the ISR. Don't do it again.
    //
    if (true == twi_inRepStart) {
        do {
            R16_I2C_DATAR = twi_slarw;
        } while (R16_I2C_CTRL1 & RB_I2C_BTF); //数据已发送
        R16_I2C_CTRL2 |= (I2C_IT_BUF | I2C_IT_EVT | I2C_IT_ERR);
    } else{
        // send start condition
        R16_I2C_CTRL2 |= (I2C_IT_BUF | I2C_IT_EVT | I2C_IT_ERR);
        twi_start();
    }
    // wait for write operation to complete
    while (wait && (TWI_MTX == twi_state)) {
        continue;
    }
    if (twi_error == 0xFF)
        return 0;   // success
    else if (twi_error == TW_MT_NACK)
        return 2;   // error: address send, nack received
    else
        return 3;   // other twi error
}

void twi_reply(uint8_t ack) {
//    LOG_INFO("twi_reply %s!", ack ? "ack" : "nack");
    // transmit master read ready signal, with or without ack
    if (ack) {
        R16_I2C_CTRL1 |= RB_I2C_ACK;
    } else {
        R16_I2C_CTRL1 &= ~RB_I2C_ACK;
    }
}

void twi_stop(void) {
//    LOG_INFO("twi_stop!");
    // send stop condition
    R16_I2C_CTRL1 |= RB_I2C_STOP;

    // update twi state
    twi_state = TWI_READY;
}

void twi_releaseBus(void) {
//    LOG_INFO("twi_releaseBus!");
    // release bus
    R16_I2C_CTRL1 |= RB_I2C_STOP;

    // update twi state
    twi_state = TWI_READY;
}
